@@ -1,6 +1,9 @@
 use strict;
 use warnings;
 
+use utf8;
+no utf8;
+
 package Smartcat::App::ProjectApi;
 
 use Smartcat::Client::ProjectApi;
@@ -109,12 +112,16 @@ sub upload_file {
       Smartcat::Client::Object::CreateDocumentPropertyModel->new(%args);
 
     $log->info("Uploading file '$path'...");
+    my $utf8_path = $path;
+    my $utf8_filename = $filename;
+    utf8::encode($utf8_path);
+    utf8::encode($utf8_filename);
     %args = (
         project_id     => $self->{rundata}->{project_id},
         document_model => $document,
         file           => {
-            path     => $path,
-            filename => $filename
+            path     => $utf8_path,
+            filename => $utf8_filename
         }
     );
     $args{disassemble_algorithm_name} =
