@@ -1,6 +1,7 @@
 Revision history for Smartcat-App
 
 {{$NEXT}}
+        - Bugfixes for UTF-8 filename support
 
 0.0.8  2021-03-26 17:17:54 UTC
         - Fix availability to export translated files via `pull` command
